<resources>
    <string name="app_name">微风健康</string>
    <string name="edittext_hint_username">用户名</string>
    <string name="edittext_hint_born_date">出生日期</string>
    <string name="edittext_hint_age">年龄</string>
    <string name="edittext_hint_height">身高</string>
    <string name="edittext_hint_weight">体重</string>
    <string name="edittext_hint_hope_weight">期望达到的体重</string>
    <string name="edittext_hint_old_password">旧密码</string>
    <string name="edittext_hint_new_password">新密码</string>
    <string name="edittext_hint_check_password">确认密码</string>
    <string name="edittext_hint_exercise_amount">输入运动量</string>
    <string name="title_fillin_personal_information">填写个人资料</string>
    <string name="title_edit_personal_information">编写个人资料</string>
    <string name="title_select_born_date">选择出生日期</string>
    <string name="title_select_weight">选择体重</string>
    <string name="title_select_hope_weight">选择目标体重</string>
    <string name="title_select_chart_model">选择模式</string>
    <string name="title_select_height">选择身高</string>
    <string name="title_select_job_type">选择工作类型</string>
    <string name="title_select_interval">选择时间周期</string>
    <string name="title_weight_test_result">体重:175斤</string>
    <string name="title_total_exercise_caloric">总计：</string>
    <string name="date_test">2013年4月21日</string>
    <string name="textview_title_sex">性别:</string>
    <string name="textview_title_job_type">工作类型:</string>
    <string name="textview_title_unit">单位</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="submit">提交</string>
    <string name="next">下一步</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="dot">.</string>
    <string name="energy_metabolism">能量代谢</string>
    <string name="other">其他</string>
    <string name="exercise">运动</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="content_description"></string>
    <string name="begin_testing">开始测试</string>
    <string name="my_energy_metabolism">我的能量代谢</string>
    <string name="my_energy_balance_center">我的能量平衡管理</string>
    <string name="bluetooth_device">蓝牙设备</string>
    <string name="refresh">刷新</string>
    <string name="on_discovery_bluetooth">正在搜索蓝牙</string>
    <string name="on_opening_bluetooth">正在开启蓝牙</string>
    <string name="detail">详情</string>
    <string name="caloric_type">热量</string>
    <string name="modify">修改</string>
    <string name="settings">设置</string>
    <string name="share">分享</string>
    <string name="history">历史</string>
    <string name="more">更多</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="job_type">工作类型</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="hope_weight">目标体重</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_password_summary">修改您当前账户的密码，保护您的隐私</string>
    <string name="account_management">账户管理</string>
    <string name="account_management_summary">添加账户与修改账户信息</string>
    <string name="unit_settings">单位设置</string>
    <string name="unit_settings_summary">设置体重、身高等数值的显示单位</string>
    <string name="bluetooth_device_settings">蓝牙设备设置</string>
    <string name="bluetooth_device_settings_summary">设置Breezing、体重称、计步器等蓝牙设备</string>
    <string name="share_by_message">短信分享</string>
    <string name="share_by_message_summary">以短信方式分享软件</string>
    <string name="share_by_email">邮件分享</string>
    <string name="share_by_email_summary">以邮件方式分享软件</string>
    <string name="share_by_other">其他方式</string>
    <string name="share_by_other_summary">以其他方式分享软件</string>
    <string name="user_instructions">使用说明</string>
    <string name="user_instructions_summary">教你如何使用微风健康客户端</string>
    <string name="about_us">关于软件</string>
    <string name="about_us_summary">了解更多关于软件的信息</string>
    <string name="related_links">相关链接</string>
    <string name="related_links_summary">教你如何使用微风健康客户端</string>
    <string name="account_detail">账户详情</string>
    <string name="height_unit">身高单位</string>
    <string name="weight_unit">体重单位</string>
    <string name="distance_unit">距离单位</string>
    <string name="my_breezing">Breezing</string>
    <string name="my_pedometer">计步器</string>
    <string name="my_weighing_scale">体重秤</string>
    <string name="please_choose_share_method">请选择分享方式</string>
    <string name="input_food_name_keyword">输入食物名称关键字</string>
    <string name="tag_increase">+</string>
    <string name="tag_decrease">-</string>
    <string name="number_zero">0</string>
    <string name="manual_input_exercise_record">手工输入运动热量代谢</string>
    <string name="exercise_intensity">运动强度</string>
    <string name="exercise_type">运动类型</string>
    <string name="record">记录</string>
    <string name="consume">消耗</string>
    <string name="type">类型</string>
    <string name="kilojoule">千焦</string>
    <string name="caloric_intake_history">我的能量摄入</string>
    <string name="caloric_burn_history">我的能量代谢</string>
    <string name="caloric_balance_history">我的能量平衡</string>
    <string name="caloric_weight_history">我的体重</string>
    <string name="energy_cost_history">我的能量消耗</string>
    <string name="week_chart_model">周模式</string>
    <string name="month_chart_model">月模式</string>
    <string name="year_chart_model">年模式</string>
    <string name="week">周</string>
    <string name="week_des_first">第</string>
    <string name="balance_history">平衡历史</string>
    <string name="date">日期</string>
    <string name="balance">平衡</string>
    <string name="move_left">向左滑动</string>
    <string name="breezing_test_notice">&#160;&#160;&#160;&#160;能量代谢是维持生命的基本能量需求，也是重要的生理参数之一。跟着提示，向左滑动一起开始使用Breezing测量您的能量代谢。</string>
    <string name="less_than_normal">低于正常水平</string>
    <string name="step_by_base_information">基本资料</string>
    <string name="step_by_breezing_test">热量消耗测试</string>
    <string name="weight_trend_notice">温馨提醒：预计您的体重将每年增加0.8kg。</string>
    <string name="update_weight">更新体重</string>
    <string name="weight_update_notice">%1$s年%2$s月%3$s日测试的体重为：%4$s%5$s</string>
    <string name="birthday">%1$s年%2$s月%3$s日</string>
    <string name="hope_weight_notice">◀%1$d斤</string>
    <string name="different_weight_value_notice">距离目标体重：%1$s/%2$s%3$s</string>
    <string name="click_to_select_expected_weight">点击选择期望体重</string>
    <string name="click_to_select_weight">点击选择体重</string>
    <string name="record_current_weight">记录当前体重</string>
    <string name="connect_to_weight_scale">连接蓝牙秤</string>
    <string name="all_catagory">所有分类</string>
    <string name="breezing_webside">http://breezing.co/</string>
    <string name="helper">新手指引</string>
    <string name="helper_step_one_intro">能量消耗与摄入类别一目了然！</string>
    <string name="helper_step_two_intro">准确记录您的各项身体变化，便于您的查阅！</string>
    <string name="helper_step_three_intro">只需三步，您的新陈代谢便可了如指掌！</string>
    <string name="helper_step_four_intro">随时记录您的饮食材料，让您的健康“有理有据”！</string>
    <string name="begin_breezing_life">开始体验</string>
    <string name="base_exercise_caloric_burn">日常活动能量消耗:(单位：%1$s)</string>
    <string name="base_exercise_caloric_burn_notice">*日常生活及工作中的基本能量消耗</string>
    <string name="digest_exercise_caloric_burn">消化能量消耗:(单位：%1$s)</string>
    <string name="digest_exercise_caloric_burn_notice">*在食物消化过程中消耗的能量</string>
    <string name="other_caloric_burn">其他能量消耗</string>
    <string name="total_food_intake">摄入总量：%1$s%2$s</string>
    <string name="unknow">未知</string>
    <string name="version_number">版本号</string>
    <string name="official_webside">官方网站</string>
    <string name="hot_line">热线电话</string>
    <string name="breezing_hot_line">(800)555&#8211;4729</string>
    <string name="copyright">© 2013 Breezing. All Rights Reserved.</string>
    <string name="are_you_sure_to_delete_intake_food_item">您确定要删除该已选食物？</string>
    <string name="notice">提示</string>
    <string name="selected">已选</string>
    <string name="title_select_date">选择日期</string>
    <string name="auto_login_notice">记住密码并自动登录</string>
    <string name="saving_image">图片保存中，请稍候</string>
    <string name="preparing_card">SD卡准备中</string>
    <string name="no_storage_card">没有发现SD卡</string>
    <string name="not_enough_space">没有足够的存储空间</string>
    <string name="modify_avatar">修改头像</string>
    <string name="modify_avatar_summary">定义个性化的头像</string>
    <string name="pick_image_from_gallery">从相册选择</string>
    <string name="take_a_photo">拍照</string>
    <string name="please_pick_image_resource">请选择图片源</string>
    <string name="add_account">添加账户</string>
    <string name="old_password_cant_be_null">请输入旧密码</string>
    <string name="new_password_cant_be_null">请输入新密码</string>
    <string name="check_password_failure">两次密码输入不一致</string>
    <string name="old_paasword_input_failure">旧密码输入错误</string>
    <string name="modify_password_success">修改密码成功</string>
    <string name="modify_password_failure">修改密码失败</string>
    <string name="password">密码</string>
    <string name="caloric_unit">能量单位</string>
    <string name="modify_unit_success">修改单位成功</string>
    <string name="modify_unit_failure">修改单位失败</string>
    <string name="please_select_unit">请选择单位</string>
    <string name="hour">时</string>
    <string name="minite">分</string>
    <string name="second">秒</string>
    <string name="exercise_timer">%1$d时%2$d分</string>
    <string name="exercise_timer_notice">请选择运动时长</string>
    <string name="exercise_timer_hint">运动时长</string>
    <string name="default_password_notice">*默认登录密码为：888888</string>
    <string name="more_than_standard_weight_notice">*高于标准体重</string>
    <string name="less_than_standard_weight_notice">*低于标准体重</string>
    <string name="equal_standard_weight_notice">*等于标准体重</string>
    <string name="current_weight_title">当前体重:</string>
   <string name="expected_weight_title">期望体重:</string>
   <string name="modify_avatar_success">修改头像成功</string>
    <string name="modify_avatar_failure">修改头像失败</string>
    <string name="delete">删除</string>
    <string name="share_message_content">%1$s年%2$s月%3$s日，%4$s摄入%5$s%6$s，消耗%7$s%8$s</string>
    <string name="share_message_subject">%1$s年%2$s月%3$s日能量平衡情况</string>
    <string name="my_breezing_test">我的能量代谢</string>
    <string name="hint_digest">消化能耗</string>
    <string name="hint_sport">运动能耗</string>
    <string name="hint_metabolism">新陈代谢</string>
    <string name="error_input_digest">请输入消化能耗值</string>
    <string name="error_input_sport">请输入运动能耗值</string>
    <string name="error_input_metabolism">请输入新陈代谢值</string>
    <string name="confirm_please">请确认:</string>
    <string name="first_breezing_test_notice">%1$s您好！\n您即将开始第一次的能量代谢测试。</string>
    <string name="do_you_scan_qr">您是否扫描了二维码？</string>
    <string name="do_you_scan_qr_right_now">是否现在扫描二维码？</string>
    <string name="btn_yes">是</string>
    <string name="btn_no">否</string>
    <string name="scan_qr_step">扫描QR码</string>
    <string name="insert_gas_mouth_step">插入气嘴</string>
    <string name="begin_breezing_step">开始Breezing</string>
    <string name="inser_formal_chip_step">插入正式芯片</string>
    <string name="connect">连接</string>
    <string name="paired_bluetooth_device">已配对的设备</string>
    <string name="enable_bluetooth_device">可用的设备</string>
    <string name="scan">扫描</string>
    <string name="stop_connecting">停止连接</string>
    <string name="on_connecting">正在连接\u2026</string>
    <string name="please_dont_shake_breezing">请不要晃动Breezing!</string>
    <string name="stop">停止</string>
    <string name="on_connecting_and_please_dont_shake_breezing">连接中，请不要晃动Breezing\u2026</string>
    <string name="bluetooth_connection">蓝牙连接</string>
    <string name="breezing_initialize">Breezing初始化</string>
    <string name="blow_and_inhale">放气并开始吸气!</string>
    <string name="begin_to_blow">开始吹气</string>
</resources>