<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <EditText
            android:id="@+id/userName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/edittext_hint_username"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/sexTitle"
                style="@style/TitleTextViewStyle"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:text="@string/textview_title_sex" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <EditText
                android:id="@+id/date"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/information_cell_height"
                android:layout_weight="1"
                android:hint="@string/edittext_hint_born_date"
                android:singleLine="true" />

            <EditText
                android:id="@+id/age"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/information_cell_height"
                android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
                android:layout_weight="1"
                android:hint="@string/edittext_hint_age"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/jobTypeTitle"
                style="@style/TitleTextViewStyle"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:text="@string/textview_title_job_type" />

            <EditText
                android:id="@+id/jobType"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
                android:singleLine="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/height"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/edittext_hint_height"
            android:singleLine="true" />

        <EditText
            android:id="@+id/weight"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/edittext_hint_weight"
            android:singleLine="true" />

        <EditText
            android:id="@+id/hopeWeight"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/edittext_hint_hope_weight"
            android:singleLine="true" />
        
        <Button
            android:id="@+id/next"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:singleLine="true"
            android:text="@string/next" />
        
    </LinearLayout>

</ScrollView>