<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <Button
        android:id="@+id/type"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/information_cell_height"
        android:singleLine="true"
        android:text="@string/exercise_type" />

    <Button
        android:id="@+id/intensity"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/information_cell_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:singleLine="true"
        android:text="@string/exercise_intensity" />

    <EditText
        android:id="@+id/amount"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/information_cell_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/edittext_hint_exercise_amount"
        android:singleLine="true" />
    
    <Button
        android:id="@+id/record"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/information_cell_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:singleLine="true"
        android:text="@string/record" />
    
    <TextView
        android:id="@+id/totalCaloric"
        android:layout_width="match_parent"
        android:layout_height="@dimen/information_cell_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_textsize" />

</LinearLayout>