<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <EditText
            android:id="@+id/metabolism"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext_selector"
            android:hint="@string/hint_metabolism"
            android:singleLine="true"
            android:inputType="number" />

        <EditText
            android:id="@+id/sport"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext_selector"
            android:hint="@string/hint_sport"
            android:singleLine="true"
            android:inputType="number" />

        <EditText
            android:id="@+id/digest"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext_selector"
            android:hint="@string/hint_digest"
            android:singleLine="true"
            android:inputType="number" />
        
        <Button   
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:singleLine="true"   
            android:background="@drawable/btn_red_round_selector"
            android:textColor="@color/white"
            android:textSize ="@dimen/normal_textsize"
            android:text="@string/confirm" />
    </LinearLayout>

</ScrollView>