<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/record_form_top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="2dp" >

        <TextView
            android:id="@+id/type"
            android:layout_width="@dimen/exercise_record_item_type_width"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/type"
            android:textColor="@color/exercise_record_form_text_color"
            android:textSize="@dimen/middle_textsize" />

        <TextView
            android:id="@+id/des"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/exercise_record_form_grey_color"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_textsize" />

        <TextView
            android:id="@+id/caloric"
            android:layout_width="@dimen/exercise_record_item_caloric_width"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/consume"
            android:textColor="@color/exercise_record_form_text_color"
            android:textSize="@dimen/middle_textsize" />
    </LinearLayout>
    
    <ImageView android:background="@drawable/divider_record_form"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/content_description"/>

</LinearLayout>
