<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/type"
        android:layout_width="@dimen/exercise_record_item_type_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_textsize"
        android:gravity="center"
        android:minHeight="@dimen/exercise_record_item_min_height"
        android:text="@string/type" />
    
    <TextView
        android:id="@+id/des"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_textsize"
        android:gravity="center"
        android:minHeight="@dimen/exercise_record_item_min_height"
        android:text="@string/detail" />
    
    <TextView
        android:id="@+id/caloric"
        android:layout_width="@dimen/exercise_record_item_caloric_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_textsize"
        android:gravity="center"
        android:minHeight="@dimen/exercise_record_item_min_height"
        android:text="@string/consume" />

</LinearLayout>
