<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <EditText
            android:id="@+id/old_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext_selector"
            android:hint="@string/edittext_hint_old_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/new_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext_selector"
            android:hint="@string/edittext_hint_new_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/check_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/information_cell_height"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext_selector"
            android:hint="@string/edittext_hint_check_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_red_round_selector"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_textsize"
            android:text="@string/modify" />
    </LinearLayout>

</ScrollView>